--- a/Style.css
+++ b/Style.css
@@ -70,10 +70,11 @@ section {
 
 /* Images */
 img {
-  width: 80%;
+  width: 90%;
   max-width: 400px;
-  border: 2px solid #ddd;
-  border-radius: 10px; /* Bords arrondis */
+  border: 3px solid #ff8c00;
+  border-radius: 15px; /* Bords arrondis */
+  
 }
 
 /* Formulaire */
